[gd_scene load_steps=6 format=3 uid="uid://b8e76cmagaohv"]

[ext_resource type="Script" uid="uid://btgec545u18ce" path="res://Scenes/Shop/shop_relic.gd" id="1_bjndo"]
[ext_resource type="Resource" uid="uid://bdttselqfmsj7" path="res://Relics/ether.tres" id="2_q3so8"]
[ext_resource type="PackedScene" uid="uid://cpjeifaoev8x7" path="res://Scenes/RelicHandler/relic_ui.tscn" id="2_vimja"]
[ext_resource type="Theme" uid="uid://cru70siydt0qh" path="res://main_theme.tres" id="4_8exqr"]
[ext_resource type="Texture2D" uid="uid://cxvb062yxb211" path="res://art/gold.png" id="5_y6rdj"]

[node name="ShopRelic" type="VBoxContainer"]
custom_minimum_size = Vector2(54, 54)
offset_right = 54.0
offset_bottom = 54.0
theme_override_constants/separation = 4
alignment = 1
script = ExtResource("1_bjndo")
relic = ExtResource("2_q3so8")

[node name="RelicContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="RelicUI" parent="RelicContainer" instance=ExtResource("2_vimja")]
layout_mode = 2

[node name="Price" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="PriceLabel" type="Label" parent="Price"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_8exqr")
text = "999"

[node name="GoldIcon" type="TextureRect" parent="Price"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
texture = ExtResource("5_y6rdj")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(35, 10)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_8exqr")
theme_override_font_sizes/font_size = 11
text = "BUY"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
